# minify

./: .gitignore  Cargo.toml  LICENSE  README.md  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.github/workflows/: ci.yml  release.yml
src/: css_minify.rs  js_minify.rs  lib.rs
tests/: api.test.ts  binding.test.ts  types.test-d.ts
ts/: binding.ts  detect.ts  index.ts  terser.ts  types.ts
