[package]
name = "crustkit-minify"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "JavaScript, CSS, and HTML minification — fast, zero-config, delightful DX"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi8", "async", "serde-json"] }
napi-derive = "2"
oxc_minifier = "0.122"
oxc_allocator = "0.122"
oxc_parser = "0.122"
oxc_span = "0.122"
oxc_codegen = "0.122"
lightningcss = { version = "1.0.0-alpha.71", features = ["sourcemap"] }
parcel_sourcemap = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1
opt-level = 3
